Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.15.0-beta1
-
None
-
2aead8b3e4513eda90140841528966b6926948bf (qt-creator/qt-creator/4.15)
-
Tooling Sprint 1.5/2021
Description
Version = https://code.qt.io/cgit/qt-creator/qt-creator.git/log/?id=99dd3a02607e2325131412a296771ab3fdf10f4d
Description:
After removing kit file for desktop qtformcu and attempted to run clean installation of qt creator i received error:
Qt for MCUs: Skipped creating fallback desktop kit: Could not find lib\QulQuickUltralite_QT_32bpp_Windows_Release.lib.
There is no such file in installation directory.